<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Кнопка Выход (слева сверху) -->
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exit"
        android:layout_marginStart="@dimen/main_toolbar_margin"
        android:layout_marginTop="@dimen/main_toolbar_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Кнопка Поделиться (справа сверху) -->
    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_share"
        android:layout_marginEnd="@dimen/main_toolbar_margin"
        android:layout_marginTop="@dimen/main_toolbar_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Заголовок "Шашки" -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/main_title_margin_top"
        app:layout_constraintTop_toBottomOf="@id/btn_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка "Играть" — якорь для всего столбика кнопок -->
    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play"
        android:layout_marginTop="@dimen/main_first_button_margin_top"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка "Правила" -->
    <Button
        android:id="@+id/btn_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_rules"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка "Игра вдвоём" -->
    <Button
        android:id="@+id/btn_two_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_two_players"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        app:layout_constraintTop_toBottomOf="@id/btn_rules"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка "Статистика" -->
    <Button
        android:id="@+id/btn_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_stats"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        app:layout_constraintTop_toBottomOf="@id/btn_two_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка "Настройки" -->
    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        app:layout_constraintTop_toBottomOf="@id/btn_stats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
