<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_dialog_round">

    <!-- Иконка победы -->
    <ImageView
        android:id="@+id/img_game_over_win"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/win"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/game_over_title"
        android:scaleType="fitCenter" />



    <TextView
        android:id="@+id/tv_game_over_winner"
        style="@style/Text.GameInfoLabelSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_winner_example"
        android:textSize="30sp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_game_over_restart"
            style="@style/SettingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/game_over_restart" />

        <Button
            android:id="@+id/btn_game_over_menu"
            style="@style/SettingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/game_over_to_menu" />
    </LinearLayout>

</LinearLayout>
