<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!-- Домой (такая же круглая, как в игре), чуть ниже статус-бара -->
    <ImageButton
        android:id="@+id/btn_settings_home"
        style="@style/GameIconButton"
        android:src="@drawable/ic_game_home"
        android:contentDescription="@string/menu_exit"
        android:layout_marginStart="@dimen/main_toolbar_margin"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Заголовок "Настройки" в одной строке с иконкой -->

    <TextView
        android:id="@+id/tv_settings_title"
        style="@style/Text.GameTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@id/btn_settings_home"
        app:layout_constraintBottom_toBottomOf="@id/btn_settings_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:id="@+id/settings_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginStart="@dimen/main_toolbar_margin"
        android:layout_marginEnd="@dimen/main_toolbar_margin"
        app:layout_constraintTop_toBottomOf="@id/btn_settings_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <!-- Играть за -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.GameInfoLabelSecondary"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/settings_play_as"
                android:layout_marginTop="@dimen/settings_section_margin_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/settings_option_margin_vertical">

                <Button
                    android:id="@+id/btn_play_white"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_play_white" />

                <Button
                    android:id="@+id/btn_play_black"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_play_black" />
            </LinearLayout>

            <!-- Бить обязательно -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.GameInfoLabelSecondary"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/settings_must_capture"
                android:layout_marginTop="@dimen/settings_section_margin_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/settings_option_margin_vertical">

                <Button
                    android:id="@+id/btn_must_capture_yes"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_yes" />

                <Button
                    android:id="@+id/btn_must_capture_no"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_no" />
            </LinearLayout>

            <!-- Подсказка хода -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.GameInfoLabelSecondary"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/settings_move_hint"
                android:layout_marginTop="@dimen/settings_section_margin_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/settings_option_margin_vertical">

                <Button
                    android:id="@+id/btn_hint_yes"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_yes" />

                <Button
                    android:id="@+id/btn_hint_no"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_no" />
            </LinearLayout>

            <!-- Язык -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.GameInfoLabelSecondary"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/settings_language"
                android:layout_marginTop="@dimen/settings_section_margin_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/settings_option_margin_vertical"
                android:layout_marginBottom="@dimen/settings_section_margin_top">

                <Button
                    android:id="@+id/btn_lang_ru"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_lang_russian" />

                <Button
                    android:id="@+id/btn_lang_en"
                    style="@style/SettingsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_lang_english" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
