<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelSelectActivity">

    <!-- Домой -->
    <ImageButton
        android:id="@+id/btn_level_home"
        style="@style/GameIconButton"
        android:src="@drawable/ic_game_home"
        android:contentDescription="@string/menu_exit"
        android:layout_marginStart="@dimen/main_toolbar_margin"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Заголовок -->
    <TextView
        android:id="@+id/tv_level_title"
        style="@style/Text.GameTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_select_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_level_home"
        app:layout_constraintBottom_toBottomOf="@id/btn_level_home" />

    <!-- Начало цепочки -->
    <Button
        android:id="@+id/btn_level_easy"
        style="@style/LevelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/level_easy"
        android:layout_marginTop="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/tv_level_title"
        app:layout_constraintBottom_toTopOf="@id/btn_level_medium"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_level_medium"
        style="@style/LevelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/level_medium"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_level_easy"
        app:layout_constraintBottom_toTopOf="@id/btn_level_hard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_level_hard"
        style="@style/LevelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/level_hard"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_level_medium"
        app:layout_constraintBottom_toTopOf="@id/btn_level_expert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_level_expert"
        style="@style/LevelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/level_expert"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_level_hard"
        app:layout_constraintBottom_toTopOf="@id/btn_level_grandmaster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_level_grandmaster"
        style="@style/LevelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/level_grandmaster"
        android:layout_marginTop="@dimen/main_buttons_spacing"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_level_expert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
