<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity">

    <!-- Домой -->
    <Button
        android:id="@+id/btn_rules_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exit"
        android:layout_marginStart="@dimen/main_toolbar_margin"
        android:layout_marginTop="@dimen/main_toolbar_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Поделиться -->
    <Button
        android:id="@+id/btn_rules_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_share"
        android:layout_marginEnd="@dimen/main_toolbar_margin"
        android:layout_marginTop="@dimen/main_toolbar_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Заголовок -->
    <TextView
        android:id="@+id/tv_rules_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_title"
        android:textSize="@dimen/main_title_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/main_title_margin_top"
        app:layout_constraintTop_toBottomOf="@id/btn_rules_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- WebView с правилами -->
    <WebView
        android:id="@+id/web_rules"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_toolbar_margin"
        android:layout_marginEnd="@dimen/main_toolbar_margin"
        android:layout_marginTop="@dimen/main_first_button_margin_top"
        app:layout_constraintTop_toBottomOf="@id/tv_rules_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
